# jetforge

./: .gitignore  Anchor.toml  Cargo.toml  DEV_NOTES.md  MAINNET_CHECKLIST.md  README.md  deploy.sh  gitignore.txt  gitignore_Version2.txt  nginx-api.conf  package-lock.json  package.json  schema.prisma  stress-test.mjs
.claude/: launch.json  settings.local.json
backend/: .env.devnet-public  .env.example  package.json  seed-mock.js  tsconfig.json
backend/prisma/: schema.prisma
backend/scripts/: backfillVolumeBuckets.js  backfillVolumeBuckets.ts  convertExistingUploads.js  manualGraduate.ts  retryGraduation.js  retryGraduation.ts  testRaydiumPool.ts
backend/src/: config.ts  holdersCache.ts  index.ts
backend/src/api/: coingecko.ts  comments.ts  creators.ts  follows.ts  leaderboard.ts  metadata.ts  portfolio.ts  router.ts  stats.ts  tokens.ts  trades.ts  upload.ts
backend/src/indexer/: index.ts
backend/src/services/: graduateKeeper.ts  (+2 more)
frontend/: .env.devnet-public  .env.example  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/public/: llms.txt  robots.txt  wallet-standard.json
landing/: index.html
programs/token-launch/: Cargo.toml
programs/token-launch/src/: errors.rs  lib.rs
programs/token-launch/src/instructions/: buy.rs  create_token.rs  execute_buyback.rs  graduate.rs  mod.rs  sell.rs  withdraw_creator_fees.rs
programs/token-launch/src/state/: bonding_curve.rs
scripts/: devnet-rehearsal.ts  lifecycle-output.json  lifecycle-test.ts  rehearsal-output.json  tsconfig.json
tests/: token-launch.ts
(+63 files in other folders)
