[package]
name = "token-launch"
version = "0.1.0"
description = "Solana token launch platform with bonding curve"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_launch"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
mpl-token-metadata = { version = "4.1.2" }
